Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105851

tst_QWebSocketServer::tst_handshakeTimeout fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.4.0 RC1, 6.5.0 Beta1
    • 6.5.0 FF
    • WebSockets
    • None
    • 50f8a9578dd54f74e8a5f99481f7f34d969d867f d885e44131 (qt/qtwebsockets/dev) 5e949114ae (qt/qtwebsockets/6.4) 5e949114ae (qt/tqtc-qtwebsockets/6.4) d885e44131 (qt/tqtc-qtwebsockets/dev) 5e949114ae (qt/qtwebsockets/6.4.0) 5e949114ae (qt/qtwebsockets/6.4.1)

    Description

       FAIL!  : tst_QWebSocketServer::tst_handshakeTimeout() Compared values are not the same
      agent:2022/08/22 05:01:43 build.go:394: 4:    Actual   (secureServerConnectionSpy.count()): 0
      agent:2022/08/22 05:01:43 build.go:394: 4:    Expected (1)                                : 1
      agent:2022/08/22 05:01:43 build.go:394: 4:    Loc: [/Users/qt/work/qt/qtwebsockets/tests/auto/websockets/qwebsocketserver/tst_qwebsocketserver.cpp(811)]
      agent:2022/08/22 05:01:43 build.go:394: 4: INFO   : tst_QWebSocketServer::cleanupTestCase() entering
      agent:2022/08/22 05:01:43 build.go:394: 4: PASS   : tst_QWebSocketServer::cleanupTestCase()
      agent:2022/08/22 05:01:43 build.go:394: 4: Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 25933ms
      agent:2022/08/22 05:01:43 build.go:394: 4: ********* Finished testing of tst_QWebSocketServer *********
      agent:2022/08/22 05:01:43 build.go:394: 4: "/Users/qt/work/install/plugins/tls/libqcertonlybackend.dylib" unloaded library (faked)
      agent:2022/08/22 05:01:43 build.go:394: 4: "/Users/qt/work/install/plugins/tls/libqsecuretransportbackend.dylib" unloaded library (faked)
      agent:2022/08/22 05:01:43 build.go:394: 4: qt-testrunner.py     INFO: Test process exited with code: 1
      agent:2022/08/22 05:01:43 build.go:394: 4: qt-testrunner.py     INFO: Test has FAILed despite all repetitions! re-runs:5 failures:5
      agent:2022/08/22 05:01:43 build.go:394: 4: CMake Error at tst_qwebsocketserverWrapperRelWithDebInfo.cmake:18 (message):
      agent:2022/08/22 05:01:43 build.go:394: 4:   /Users/qt/work/install/libexec/qt-testrunner.py --
      agent:2022/08/22 05:01:43 build.go:394: 4:   /Users/qt/work/qt/qtwebsockets_standalone_tests/tests/auto/websockets/qwebsocketserver/tst_qwebsocketserver
      agent:2022/08/22 05:01:43 build.go:394: 4:   execution failed with exit code 2.
      agent:2022/08/22 05:01:43 build.go:394: 4: 
      agent:2022/08/22 05:01:43 build.go:394: 4: 
      agent:2022/08/22 05:01:43 build.go:394:  4/11 Test  #4: tst_qwebsocketserver ..............***Failed  144.96 sec
      agent:2022/08/22 05:01:43 build.go:394: 75% tests passed, 1 tests failed out of 4
      

      Build log: https://testresults.qt.io/logs/qt/qtwebsockets/a3c4f76e504367fff2af3afd9e7ca3b188359e32/MacOSMacOS_12arm64MacOSMacOS_12arm64Clangqtci-macos-12-arm64TestOnly/99ac00f1896b7cbcd14e653bba1242a0193ca85c/test_1661144382/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwebsockets/tasks/1661144272

      Tested changes (refs/builds/qtci/dev/1661144271):
      https://codereview.qt-project.org/c/qt/qtwebsockets/+/427884/2 Update dependencies on 'dev' in qt/qtwebsockets

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            manordheim MÃ¥rten Nordheim
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes